--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,8 +7,8 @@
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include blogOverView.html %}
-  {% include projectsOverView.html %}
+  {% include blogOverview.html %}
+  {% include projectsOverview.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
