--- a/_includes/projectOverview.html
+++ b/_includes/projectOverview.html
@@ -5,7 +5,7 @@
                 </div>
             </div>
     <div class="container-fluid">
-        {% for post in site.projects.posts %}
+        {% for post in site.Projects %}
             {% assign startRow = forloop.index | modulo: 3 %}
                 
             {% if startRow == 0 %}
@@ -13,8 +13,8 @@
                 {% endif %}
 
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="{{ post.img }}" class="img-responsive" alt="{{post.title}}">
+                    <a href="{{post.url}}" class="portfolio-box">
+                        <img src="Projects/{{ post.img }}" class="img-responsive" alt="{{post.title}}">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
