--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -353,3 +353,9 @@ body {
     -webkit-tap-highlight-color: $theme-dark;
 }
 
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
