--- a/css/main.scss
+++ b/css/main.scss
@@ -42,3 +42,11 @@ $theme-dark: #222;
         "mixins",
         "base"
 ;
+
+img.circuit {
+        max-width: 50%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+}
