--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -358,4 +358,9 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+}
+
+.padded {
+    padding: 20px;
 }
