--- a/css/blog.css
+++ b/css/blog.css
@@ -30,3 +30,11 @@ p {
 .sized {
     max-width: 100%;
 }
+
+img.circuit {
+    max-width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
