--- a/css/blog.css
+++ b/css/blog.css
@@ -38,3 +38,39 @@ img.circuit {
     margin-right: auto;
     width: 50%;
 }
+
+.padded .reset {
+    padding: 0px!important;
+}
+
+.center .reset {
+    margin-left: 0px!important;
+    margin-right: 0px!important;
+    width: auto!important;
+    text-align: left!important;
+}
+
+@media only screen and (max-width: 600px) {
+    .code {
+        width: 100%;
+        padding-left: 5px;
+        padding-right: 5px;
+        max-height: 800px;
+    }
+
+    .padded {
+        padding: 1px;
+    }
+
+    img.circuit {
+        max-width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: auto;
+    }
+
+    .center {
+        width: 100%;
+    }
+}
