--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,4 +31,17 @@
 
     <!-- Utilities for handling code to html -->
     <script src="/js/escape.js"></script>
+
+    <!-- jQuery -->
+    <script src="/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="/js/jquery.easing.min.js"></script>
+    <script src="/js/jquery.fittext.js"></script>
+    <script src="/js/wow.min.js"></script>
+
+    <script src="/js/expander.js"></script>
 </head>
