still working on upgrading to boot strap 4

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
 
     <title>{{ page.title }} | {{ site.title }}</title>
 
+    <!-- <script src="/css/bootstrapFix.css"></script> -->
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
 
