--- a/_includes/projectOverview.html
+++ b/_includes/projectOverview.html
@@ -14,7 +14,7 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <a href="{{post.url}}" class="portfolio-box">
-                        <img src="Projects/{{ post.img }}" class="img-responsive" alt="{{post.title}}">
+                        <img src="Projects/{{ post.img }}" class="img-fluid" alt="{{post.title}}">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
