--- a/_includes/blogsOverview.html
+++ b/_includes/blogsOverview.html
@@ -1,29 +1,32 @@
 <section id="blog">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Recent Posts:</h2>
-                <hr class="primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Recent Posts:</h2>
+                    <hr class="primary">
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        {% for post in site.Blog limit:5 %}
-            {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
-            {% if thecycle == 'odd' %}
-                <div class="row">
-            {% endif %}
-                <a href="{{post.url}}">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="service-box">
-                            <h3>{{post.title}}</h3>
-                            <p class="text-muted">{{post.summary}}</p>
+        <div class="container">
+            {% for post in site.Blog limit:5 %}
+                {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+                {% if thecycle == 'odd' %}
+                    <div class="row">
+                {% endif %}
+                    
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <a href="{{post.url}}">
+                                <div class="service-box">
+                                    <h3>{{post.title}}</h3>
+                                    <p class="text-muted">{{post.summary}}</p>
+                                </div>
+                            </a>
                         </div>
+                    
+                <!-- Need to close the div on the opposite group -->
+                {% if thecycle == 'even' %}
                     </div>
-                </a>
-            {% if thecycle == 'odd' %}
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
-</section>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </section>
