--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -364,3 +364,10 @@ body {
 .padded {
     padding: 20px;
 }
+
+.navbar-fixed-top {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 10;
+    padding: 50px;
+}
