--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="col-lg-8 offset-lg-2 text-center">
                 <h2 class="section-heading">Find latest tech tips under the Blog, and more tools and maker projects under Projects!</h2>
                 <hr class="light">
                 <a href="#blog" class="btn btn-default btn-xl page-scroll">Blog</a>
