--- a/_includes/circuitPreview.html
+++ b/_includes/circuitPreview.html
@@ -1,5 +1,5 @@
 <div class="center sized">
-    <div class="d-none d-lg-block">
+    <div class="d-none d-lg-block center">
         <iframe class="" width="800" height="600" src="{{ url }}">Loading MultiSim Schematic . . .</iframe>
     </div>
     <div class="d-lg-none">
