--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,21 +1,24 @@
 <section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="col-lg-8 offset-lg-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
                 <p>Have a project for me or want to help with a project? Cool! Send me an email and I will get back to you as soon as possible!</p>
             </div>
-            <div class="col-lg-4 col-lg-offset-2 text-center">
+        </div>
+        <div class="row">
+            <div class="col-lg-4 offset-lg-2 text-center">
                 <a href="/contact">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 </a>
             </div>
-            <div class="col-lg-4 col-lg-offset-2 text-center">
+            <div class="col-lg-4 offset-lg-2 text-center">
                 <a href="https://github.com/{{ site.github_username }}">
                 <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>{{ site.github_username }}</p>
                 </a>
             </div>
+        </div>
     </div>
 </section>
