--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,15 +10,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
+            {% for page in site.data.pages.list %}
+              <li class="nav-item {% if page.url == page.url %}active{% endif %}">
+                  <a class="nav-link" href="/{{ page.url }}">{{ page.title }}</a>
+              </li>
+            {% endfor %}
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
