--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@ body {
 }
 
 hr {
-    border-color: $theme-primary;
+    border-color: $theme-primary !important;
     border-width: 3px;
     max-width: 50px;
 }
@@ -23,7 +23,7 @@ a {
     color: $theme-primary;
     &:hover,
     &:focus {
-        color: darken($theme-primary, 10%);
+        color: darken($theme-primary, 10%) !important;
     }
 }
 
@@ -43,11 +43,11 @@ p {
 }
 
 .bg-primary {
-    background-color: $theme-primary;
+    background-color: $theme-primary !important;
 }
 
 .bg-dark {
-    background-color: $theme-dark;
+    background-color: $theme-dark !important;
     color: white;
 }
 
@@ -71,7 +71,7 @@ aside {
 
 .navbar-default {
     background-color: white;
-    border-color: rgba($theme-dark, .5);
+    border-color: rgba($theme-dark, .5) !important;
     @include sans-serif-font;
     @include transition-all;
     .navbar-header .navbar-brand {
@@ -81,7 +81,7 @@ aside {
         text-transform: uppercase;
         &:hover,
         &:focus {
-            color: darken($theme-primary, 10%);
+            color: darken($theme-primary, 10%) !important;
         }
     }
     .nav {
@@ -91,9 +91,9 @@ aside {
                 text-transform: uppercase;
                 font-weight: 700;
                 font-size: 13px;
-                color: $theme-dark;
+                color: $theme-dark !important;
                 &:hover {
-                    color: $theme-primary;
+                    color: $theme-primary !important;
                 }
             }
             &.active {
@@ -127,20 +127,20 @@ aside {
         }
         &.affix {
             background-color: white;
-            border-color: rgba($theme-dark, .5);
+            border-color: rgba($theme-dark, .5) !important;
             .navbar-header .navbar-brand {
-                color: $theme-primary;
+                color: $theme-primary!important;
                 font-size: 14px;
                 &:hover,
                 &:focus {
-                    color: darken($theme-primary, 10%);
+                    color: darken($theme-primary, 10%) !important;
                 }
             }
             .nav > li > a,
             .nav > li > a:focus {
                 color: $theme-dark;
                 &:hover {
-                    color: $theme-primary;
+                    color: $theme-primary !important;
                 }
             }
         }
@@ -350,7 +350,7 @@ img::-moz-selection {
 }
 
 body {
-    -webkit-tap-highlight-color: $theme-dark;
+    -webkit-tap-highlight-color: $theme-dark !important;
 }
 
 
