--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto">
             {% for page in site.data.pages.list %}
               <li class="nav-item {% if page.url == page.url %}active{% endif %}">
                   <a class="nav-link" href="/{{ page.url }}">{{ page.title }}</a>
