--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,6 +11,7 @@
   {% include projectOverview.html %}
   {% include contact.html %}
   {% include scripts.html %}
+  {% include tracking.html  %}
 </body>
 
 </html>
