--- a/_includes/circuitPreview.html
+++ b/_includes/circuitPreview.html
@@ -1,3 +1,6 @@
+{% if include.url %}
+{% assign url=include.url %}
+{% endif %}
 <div class="center sized">
     <div class="d-none d-lg-block center">
         <iframe class="" width="800" height="600" src="{{ url }}">Loading MultiSim Schematic . . .</iframe>
