--- a/_includes/tracking.html
+++ b/_includes/tracking.html
@@ -5,9 +5,8 @@
 </div>
 
 <div class="bg-secondary fixed-bottom printHide border-top border-secondary" style="display:none;" id="trackingConsent">
-	<span class="d-none d-md-block" title="This includes such data as referring site, browser type and size, and country of use.">May we use Google Analytics to collect anonymized data on your use of the site?</span>
-	<span class="d-block d-md-none">May we use Google Analytics to collect anonymized data on your use of this site such as browser type and size, what site referred you, and country of use?</span>
-	<div><button class="btn btn-primary" onclick="consent()">Consent</button><div>
+	<span title="This includes such data as referring site, browser type and size, and country of use.">By using this site, you agree to have anonymous data collected on your usage through Google Analytics.</span>
+	<div><button class="btn btn-primary" onclick="hide()">Hide</button><div>
 
 	<span>We use this to help us understand how we are doing on getting the word out, and what browsers we should be testing against to make sure the site works for all our readers.</span>
 	<!-- consent footer -->
@@ -15,7 +14,7 @@
 
 
 <script>
-var consent_cookie = 'consent'
+var hide_cookie = 'hide_analytics'
 // from https://stackoverflow.com/a/5762713
 function loadjscssfile(filename, filetype){
  if (filetype=="js"){ //if filename is a external JavaScript file
@@ -35,19 +34,20 @@ function loadjscssfile(filename, filetype){
 function loadTracking() {
 	loadjscssfile("/js/GA.js", "js") //dynamically load and add this .js file
 }
-// on consent, load GA.js
-function consent(from_cookie=false) {
-	loadTracking();
+loadTracking();
+// on hide
+function hide(from_cookie=false) {
 	$('#trackingConsent').fadeOut(500)
 	// if caused by user action, store cookie to prevent re-asking
 	if(!from_cookie) {
-		setCookie(consent_cookie, true, 90)
+		setCookie(hide_cookie, true, 90)
 	}
 }
+
 function checkCookie() {
-	cookieVal = getCookie(consent_cookie);
-	consentVal = JSON.parse(cookieVal);
-	if(consentVal) {
+	cookieVal = getCookie(hide_cookie);
+	hideVal = JSON.parse(cookieVal);
+	if(hideVal) {
 		loadTracking();
 	}
 	else {
