add setup for comics

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,7 @@
   {% include about.html %}
   {% include blogsOverview.html %}
   {% include projectOverview.html %}
+  {% include comicsOverview.html %}
   {% include contact.html %}
   {% include scripts.html %}
   {% include tracking.html  %}
