--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -5,7 +5,7 @@
 
 <body id="page-top">
   {% include nav.html %}
-  {{ page.content }}
+  {{ content }}
   {% include scripts.html %}
   {% include tracking.html  %}
 </body>
