make image responsive

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -13,7 +13,7 @@ layout: basic
             <div class="card-header center {{ page.foreground }}">
                 <h1>{{ page.title }}</h1>
             </div>
-            <img src="{{ page.image }}" class="center {{ page.size }}" style="max-height: 50%;" alt="Loading . . ." title="{{ page.image_title }}"/>
+            <img src="{{ page.image }}" class="center {{ page.size }} img-fluid" style="max-height: 50%;" alt="Loading . . ." title="{{ page.image_title }}"/>
         </div>
 
         <div class="card-footer span6 center">
