--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
     text-align: center;
 }
 
-
 .white {
     color: white;
 }
@@ -14,4 +13,13 @@
     display: inline-block;
     max-width: 100px;
     height: auto;
+}
+
+ul.checked_list {
+    list-style: none;
+}
+
+ul.checked_list li:before {
+    content: "✓";
+    padding-right: 1ch;
 }
