--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
 
     <script src="/js/expander.js"></script>
 
+    <script src="/js/cookie_utils.js"></script>
+
     <!-- Custom Fonts -->
     <link
         href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
