--- a/_includes/tracking.html
+++ b/_includes/tracking.html
@@ -1,58 +1,122 @@
-<script src="/js/cookie_utils.js"></script>
-
-<div style="height: 300px;" class="printHide">
-	<!-- Provide a region while the footer is visible to make the scroll go the whole way. -->&nbsp;
-</div>
-
-<div class="bg-secondary fixed-bottom printHide border-top border-secondary" style="display:none;" id="trackingConsent">
-	<span title="This includes such data as referring site, browser type and size, and country of use.">By using this site, you agree to have anonymous data collected on your usage through Google Analytics.</span>
+<div class="bg-secondary fixed-bottom border-top border-secondary printHide" style="display:none;" id="trackingConsent">
+    <div>
+        <!-- <span title="This includes such data as referring site, browser type and size, and country of use.">By using this site, you agree to have anonymous data collected on your usage through Google Analytics.</span>
 	<div><button class="btn btn-primary" onclick="hide()">Hide</button><div>
 
-	<span>We use this to help us understand how we are doing on getting the word out, and what browsers we should be testing against to make sure the site works for all our readers.</span>
+	<span>We use this to help us understand how we are doing on getting the word out, and what browsers we should be testing against to make sure the site works for all our readers.</span> -->
+
+		<span class="d-none d-md-block" title="This includes such data as refering site, browser type and size, and country of use.">May we use Google Analytics to collect anymonymized data on your use of the site?</span>
+		<span class="d-sm-none">May we use Google Analytics to collect anymonymized data on your use of this site such as browser type and size, what site referred you, and country of uses?</span>
+		<div><button class="btn btn-primary" onclick="consent()">Consent</button><div>
+
+		<span>We use this to help us understand how we are doing on getting the word out, and what browsers we should be testing against to make sure the site works for all our readers.</span>
+
+    </div>
 	<!-- consent footer -->
 </div>
 
 
 <script>
-var hide_cookie = 'hide_analytics'
-// from https://stackoverflow.com/a/5762713
-function loadjscssfile(filename, filetype){
- if (filetype=="js"){ //if filename is a external JavaScript file
-  var fileref=document.createElement('script')
-  fileref.setAttribute("type","text/javascript")
-  fileref.setAttribute("src", filename)
- }
- else if (filetype=="css"){ //if filename is an external CSS file
-  var fileref=document.createElement("link")
-  fileref.setAttribute("rel", "stylesheet")
-  fileref.setAttribute("type", "text/css")
-  fileref.setAttribute("href", filename)
- }
- if (typeof fileref!="undefined")
-  document.getElementsByTagName("head")[0].appendChild(fileref)
-}
-function loadTracking() {
-	loadjscssfile("/js/GA.js", "js") //dynamically load and add this .js file
-}
-loadTracking();
-// on hide
-function hide(from_cookie=false) {
-	$('#trackingConsent').fadeOut(500)
-	// if caused by user action, store cookie to prevent re-asking
-	if(!from_cookie) {
-		setCookie(hide_cookie, true, 90)
-	}
-}
 
-function checkCookie() {
-	cookieVal = getCookie(hide_cookie);
-	hideVal = JSON.parse(cookieVal);
-	if(hideVal) {
-		loadTracking();
-	}
-	else {
-		$('#trackingConsent').fadeIn(500)
-	}
-}
-$(window).ready(checkCookie);
+    var dismiss_cookie = 'dismiss'
+    var opt_out_cookie = 'opt_out'
+    var consent_cookie = 'consent'
+
+    // from https://stackoverflow.com/a/5762713
+    function loadjscssfile(filename, filetype) {
+        if (filetype == "js") { //if filename is a external JavaScript file
+            var fileref = document.createElement('script')
+            fileref.setAttribute("type", "text/javascript")
+            fileref.setAttribute("src", filename)
+        }
+        else if (filetype == "css") { //if filename is an external CSS file
+            var fileref = document.createElement("link")
+            fileref.setAttribute("rel", "stylesheet")
+            fileref.setAttribute("type", "text/css")
+            fileref.setAttribute("href", filename)
+        }
+        if (typeof fileref != "undefined")
+            document.getElementsByTagName("head")[0].appendChild(fileref)
+    }
+
+    function loadTracking() {
+        loadjscssfile("/js/GA.js", "js") //dynamically load and add this .js file
+    }
+
+    // on dismiss, hide footer
+    function dismiss(from_cookie = false) {
+        $('#trackingConsent').fadeOut(500)
+
+        // if caused by user action, store cookie to prevent re-asking
+        if (!from_cookie) {
+            clear_stored_values();
+            setCookie(dismiss_cookie, true, 90)
+        }
+    }
+
+    function optOut(from_cookie = false) {
+        // GA provided method to disable tracking for this user: 
+        // https://developers.google.com/analytics/devguides/collection/analyticsjs/user-opt-out
+        window['ga-disable-UA-XXXXX-Y'] = true;
+        dismiss(from_cookie);
+
+        if (!from_cookie) {
+            clear_stored_values();
+            setCookie(opt_out_cookie, true, 365);
+        }
+    }
+
+    function checkCookie() {
+        cookieVal = getCookie(dismiss_cookie);
+        dismissVal = JSON.parse(cookieVal);
+
+        cookieVal = getCookie(opt_out_cookie);
+        optOutVal = JSON.parse(cookieVal);
+
+        cookieVal = getCookie(consent_cookie);
+        consentVal = JSON.parse(cookieVal);
+
+        console.debug("dismiss", dismissVal, " optOutVal ", optOutVal, " consentVal ", consentVal)
+
+        if (optOutVal == true) {
+            optOut(true);
+            console.debug("opt out, aborting")
+            return; // user has opted out, just stop.
+        }
+
+        if(consentVal == true) {
+            console.debug("consented, loading")
+            loadTracking();
+            return;
+        }
+
+        if (dismissVal != true) {
+            console.debug("not dismissed showing")
+            $('#trackingConsent').fadeIn(500)
+        }
+    }
+
+    
+
+    // on consent, load GA.js
+    function consent(from_cookie=false) {
+        loadTracking();
+        $('#trackingConsent').fadeOut(500)
+
+        // if caused by user action, store cookie to prevent re-asking
+        if(!from_cookie) {
+            clear_stored_values();
+            setCookie(consent_cookie, true, 90)
+        }
+    }
+
+    function clear_stored_values() {
+        var values_to_clear = [dismiss_cookie, consent_cookie, opt_out_cookie];
+        values_to_clear.forEach(c => {
+            eraseCookie(c);
+        });
+    }
+
+
+    $(window).ready(checkCookie);
 </script>
