--- a/_includes/blogsOverview.html
+++ b/_includes/blogsOverview.html
@@ -30,4 +30,12 @@
         {% endif %}
         {% endfor %}
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <a href="/Blog" class="btn btn-default btn-xl">View All Posts</a>
+            </div>
+        </div>
+    </div>
 </section>
