--- a/_includes/blogsOverview.html
+++ b/_includes/blogsOverview.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <a href="/Blog" class="btn btn-default btn-xl">View All Posts</a>
+                <a href="/Blog" class="btn btn-primary btn-xl">View All Posts</a>
             </div>
         </div>
     </div>
