--- a/_includes/blogsOverview.html
+++ b/_includes/blogsOverview.html
@@ -9,7 +9,7 @@
     </div>
     <div class="container">
         {% assign sorted_blog_posts = (site.Blog | sort: 'date') | reverse %}
-        {% for post in sorted_blog_posts limit:8 %}{% if post.summary %}
+        {% for post in sorted_blog_posts limit:9 %}{% if post.summary %}{% comment %} I want 8, but the first will always be the "Blog" index {% endcomment %}
         {% capture thecycle %}{% cycle 'odd', 'test', 'test2', 'even' %}{% endcapture %}
         {% if thecycle == 'odd' %}
         <div class="row">
