make highlight available to all blogs

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,9 @@
 {% include head.html %}
 
 <body id="page-top" class="bg-dark padded">
-
+    <link rel="stylesheet" href="/css/highlight/styles/darcula.css">
+    <script src="/css/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <link rel="stylesheet" href="/css/blog.css" type="text/css">
     {% include nav.html %}
     <div style="height: 50px;"><!--padding-->&nbsp;</div>
