try including a .md file

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,6 +18,7 @@
     </div>
 
     <div class="blog-main">
+        {% include toc.md %}
             {{ page.content }}
     </div>
     {% include scripts.html %}
